--- a/portfolio.html
+++ b/portfolio.html
@@ -29,16 +29,16 @@
         <nav class="header__nav">
           <ul class="header__list list">
             <li class="header__item">
-              <a class="header__link link active-link " href="./index.html"
+              <a class="header__link link header__link--active " href="./index.html"
                 >Студія</a
               >
             </li>
               <li class="header__item">
-                  <a class="header__link link active-link portfolio" href="#"
+                  <a class="header__link link header__link--active portfolio" href="#"
                     >Портфоліо</a>
               </li>
             <li class="header__item">
-              <a class="header__link link active-link" href="#">Контакти</a>
+              <a class="header__link link header__link--active" href="#">Контакти</a>
             </li>
           </ul>
         </nav>
@@ -46,14 +46,14 @@
           <ul class="header__list list">
             <li class="header__item">
               <a
-                class="contacts__link link active-link"
+                class="contacts__link link header__link--active"
                 href="mailto:info@devstudio.com"
                 ><svg class="contacts__icon-mail icon" width="16" height="12">
                   <use href="./images/icons.svg#icon-mail"></use></svg><span>info@devstudio.com</span></a
               >
             </li>
             <li class="header__item">
-              <a class="contacts__link link active-link" href="tel:+380961111111"
+              <a class="contacts__link link header__link--active" href="tel:+380961111111"
                 ><svg class="contacts__icon-tel icon" width="10" height="16">
                   <use href="./images/icons.svg#icon-tel"></use></svg><span>+38 096 111 11 11</span></a
               >
@@ -268,7 +268,7 @@
             <ul class="address__list list">
               <li class="address__item">
                 <a
-                  class="address__map-link link active-link"
+                  class="address__map-link link address__link--active"
                   href="https://goo.gl/maps/F1iqAHA5WDpbXQDT6"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
@@ -277,14 +277,14 @@
               </li>
               <li class="address__item">
                 <a
-                  class="address__mail-link link active-link"
+                  class="address__mail-link link address__link--active"
                   href="mailto:info@devstudio.com"
                   >info@devstudio.com</a
                 >
               </li>
               <li class="address__item">
                 <a
-                  class="address__tel-link link active-link"
+                  class="address__tel-link link address__link--active"
                   href="tel:+380961111111"
                   >+38 096 111 11 11</a
                 >
@@ -295,29 +295,29 @@
         <div class="footer__cocial">
           <h3 class="footer__title">приєднуйтесь</h3>
           <ul class="cocial list">
-            <li class="cocial__item footer-cocial-item">
-              <a href="" class="cocial__link link footer-cocial-link">
+            <li class="cocial__item cocial__item--color">
+              <a href="" class="cocial__link link cocial__link--color">
                 <svg class="cocial__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="cocial__item footer-cocial-item">
-              <a href="" class="cocial__link link footer-cocial-link"
+            <li class="cocial__item cocial__item--color">
+              <a href="" class="cocial__link link cocial__link--color"
                 ><svg class="cocial__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="cocial__item footer-cocial-item">
-              <a href="" class="cocial__link link footer-cocial-link"
+            <li class="cocial__item cocial__item--color">
+              <a href="" class="cocial__link link cocial__link--color"
                 ><svg class="cocial__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="cocial__item footer-cocial-item">
-              <a href="" class="cocial__link link footer-cocial-link"
+            <li class="cocial__item cocial__item--color">
+              <a href="" class="cocial__link link cocial__link--color"
                 ><svg class="cocial__icon" width="20" height="20">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
