--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
               <a
                 class="contacts__link link header__link--active"
                 href="mailto:info@devstudio.com"
-                ><svg class="contacts__icon-mail icon" width="16" height="12">
+                ><svg class="contacts__icon-mail contacts__icon" width="16" height="12">
                   <use href="./images/icons.svg#icon-mail"></use></svg>
                 <span>info@devstudio.com</span></a
               >
             </li>
             <li class="header__item">
               <a class="contacts__link link header__link--active" href="tel:+380961111111"
-                ><svg class="contacts__icon-tel icon" width="10" height="16">
+                ><svg class="contacts__icon-tel contacts__icon" width="10" height="16">
                   <use href="./images/icons.svg#icon-tel"></use></svg>
                 <span>+38 096 111 11 11</span></a
               >
